scrollbar fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
  html, body {
   position: relative;
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   padding: 0;
   font-family: sans-serif;
